Improved minor wording, bit of feedback incorporation

--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -288,7 +288,7 @@ Equation (4) enforces a specific task order; $IP$ is the set of pairs of tasks $
 
 \bigskip
 
-The above model can be used to optimize the installation project, under some severe assumptions. It is assumed that the precise weather is known for the entire project (which can often span years), assumes no delay in tasks other than that based on weather, and assumes every turbine is active at full strength without any failures from the moment it is completed. This said, creating this model was valuable practice for me, as the steps it took me to get to this model taught me more aspects to pay attention to. 
+The above model can be used to optimize the installation project. The approach of using binary variables representing decisions for each time step comes from the literature, for example \cite{besnard2011stochastic,irawan2019optimisation}. It is assumed that the precise weather is known for the entire project (which can often span years), assumes no delay in tasks other than that based on weather, and assumes every turbine is active at full strength without any failures from the moment it is completed. This said, creating this model was valuable practice for me, as the steps it took me to get to this model taught me more aspects to pay attention to. 
 
 \subsubsection{Maintenance model}
 The maintenance model is very similar in structure; it assumes that an asset will fail if it is not maintained for some predetermined time. Under these assumptions the maintenance models had a set amount of minimum maintenance tasks that should be performed, and a set of optional tasks that can be performed to increase uptime:
@@ -524,7 +524,7 @@ Equation (51) is used to ensure the starting times of consecutive tasks are far 
 
 \bigskip
 
-This is a fairly straightforward model (compared to the other models shown) as it is meant to only schedule task in a short timespan (a month) and many impactful decisions have already been made in the high-level model. The largest drawback of this model is the speed at which it grows based on the number of tasks. As $|J|$ is the maximum amount of tasks that can be assigned to a single vessel, $|J|$ will likely have to be equal to $|I|$. This would mean the amount of $a_{v,i,j}$ variables grows quadratically with the amount of tasks, and the amount of constraints resulting from equation (51) grows cubically with the number of tasks. 
+This is a fairly straightforward model (compared to the other models shown) as it is meant to only schedule task in a short timespan (a month) and many impactful decisions have already been made in the high-level model. The largest drawback of this model is the speed at which it grows based on the number of tasks. As $|J|$ is the maximum amount of tasks that can be assigned to a single vessel, $|J|$ will likely have to be equal to $|I|$. This would mean the amount of $a_{v,i,j}$ variables grows quadratically with the amount of tasks, and the amount of constraints resulting from equation (51) grows cubically with the number of tasks. While cubic growth in the number of tasks is a weakness, the model size is independent of amount of timesteps. The previously shown models had discrete timesteps and binary variables for each timestep, which resulted in the amount of variables and constraints growing linearly with timesteps. As there will generally be orders of magnitudes more timesteps than tasks, removing this linear growth mitigates the effect of the cubic growth in the number of tasks. This is further helped by the robustness measure in the high-level model; that model can be tuned to try and spread out tasks over months, which will reduce the amount of tasks in a single month. 
 
 The model could potentially be expanded by adding a more sophisticated cost function (which takes into account downtime costs for routine maintenance tasks), making durations stochastic, or by adding a robustness measure (a buffer variable similar to $\gamma_\sigma$ in the high level model can be added to equation (51)). As I have not yet fully implemented this multilevel model these improvements might happen later on in my research, depending on the initial implementation results. These results are also required to properly reflect on these two levels of the multilevel model; potentially a stronger link can be used between the two levels but at this point in time I am unable to make any definitive statement on this. 
 
